# Arcade

./: CMakeLists.txt  LICENSE  README.md  main.cpp
doc/: DOCUMENTATION.md
include/: Core.hpp  Lib.hpp  arcade.hpp
interfaces/: CMakeLists.txt  Enum.hpp  FrameBuffer.hpp  IDisplay.hpp  IGame.hpp
libs/display/ncurses/: CMakeLists.txt  main.cpp
libs/display/ncurses/include/: DisplayNcurses.hpp
libs/display/ncurses/src/: DisplayNcurses.cpp
libs/display/sdl2/: CMakeLists.txt  main.cpp
libs/display/sdl2/include/: DisplaySdl2.hpp
libs/display/sdl2/src/: DisplaySdl2.cpp
libs/display/sfml/: CMakeLists.txt  main.cpp
libs/display/sfml/include/: DisplaySfml.hpp
libs/display/sfml/src/: DisplaySfml.cpp
libs/games/snake/: CMakeLists.txt
libs/games/snake/include/: GameSnake.hpp
libs/games/snake/src/: GameSnake.cpp
menu/: CMakeLists.txt
menu/include/: menu.hpp
menu/src/: menu.cpp
src/: Core.cpp  Lib.cpp  arcade.cpp
